crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__typing-only-third-party-import_singledispatch.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Make third-party import `pandas.DataFrame` lazy
  --> singledispatch.py:12:20
   |
10 | from numpy.typing import ArrayLike
11 | from scipy.sparse import spmatrix
12 | from pandas import DataFrame
   |                    ^^^^^^^^^
13 |
14 | if TYPE_CHECKING:
   |
help: Convert to a lazy import (or move into a type-checking block)
   |
11 | from scipy.sparse import spmatrix
   - from pandas import DataFrame
12 + lazy from pandas import DataFrame
13 |
   |
note: This is an unsafe fix and may change runtime behavior
